CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET (this_target launchpad)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(${this_target} REQUIRED
	gobject-2.0
	gio-2.0
	glib-2.0
	aul
	dlog
	ecore
	libprivilege-control
	libsmack
	deviced
	elementary
	libsystemd-daemon
	dbus-glib-1
	vconf
	)

FOREACH(flag ${${this_target}_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Wl,-zdefs" )
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fPIE")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fdata-sections -ffunction-sections -Wl,--gc-sections")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -D_FILE_OFFSET_BITS=64")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -I/usr/include/aul/launch -I/usr/include/aul/launchpad")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed")
SET(CMAKE_SKIP_BUILD_RPATH TRUE)

ADD_DEFINITIONS("-DSHARE_PREFIX=\"/usr/share/aul\"")
IF(_APPFW_FEATURE_PRIORITY_CHANGE)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_PRIORITY_CHANGE")
ENDIF(_APPFW_FEATURE_PRIORITY_CHANGE)

IF(_APPFW_FEATURE_PROCESS_POOL)
IF(_APPFW_FEATURE_PROCESS_POOL_COMMON)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_PROCESS_POOL_COMMON")
ENDIF(_APPFW_FEATURE_PROCESS_POOL_COMMON)
ADD_DEFINITIONS("-D_APPFW_FEATURE_PROCESS_POOL")
IF(_APPFW_FEATURE_PROCESS_POOL_HW_RENDERING)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_PROCESS_POOL_HW_RENDERING")
ENDIF(_APPFW_FEATURE_PROCESS_POOL_HW_RENDERING)
IF(_APPFW_FEATURE_PROCESS_POOL_SW_RENDERING)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_PROCESS_POOL_SW_RENDERING")
ENDIF(_APPFW_FEATURE_PROCESS_POOL_SW_RENDERING)

SET(LAUNCHPAD_LOADER "launchpad-loader")
SET(${LAUNCHPAD_LOADER}_SOURCE_FILES
	process_pool/launchpad_loader.c
	process_pool/process_pool.c
	process_pool/smack_util.c
	)
ADD_EXECUTABLE(${LAUNCHPAD_LOADER} ${${LAUNCHPAD_LOADER}_SOURCE_FILES})

TARGET_LINK_LIBRARIES(${LAUNCHPAD_LOADER} aul)
TARGET_LINK_LIBRARIES(${LAUNCHPAD_LOADER} "-ldl")
TARGET_LINK_LIBRARIES(${LAUNCHPAD_LOADER} ${${this_target}_LDFLAGS} "-pie")

SET_TARGET_PROPERTIES(${LAUNCHPAD_LOADER}
	PROPERTIES SKIP_BUILD_RPATH TRUE
	) # remove rpath option that is automatically generated by cmake.
INSTALL(TARGETS ${LAUNCHPAD_LOADER} DESTINATION bin)

SET(LAUNCHPAD_PROCESS_POOL "launchpad-process-pool")

SET(${LAUNCHPAD_PROCESS_POOL}_SOURCE_FILES
	process_pool/launchpad.c
	process_pool/process_pool.c
	process_pool/smack_util.c
	)
ADD_EXECUTABLE(${LAUNCHPAD_PROCESS_POOL} ${${LAUNCHPAD_PROCESS_POOL}_SOURCE_FILES})

TARGET_LINK_LIBRARIES(${LAUNCHPAD_PROCESS_POOL} aul_mods)
TARGET_LINK_LIBRARIES(${LAUNCHPAD_PROCESS_POOL} aul)
TARGET_LINK_LIBRARIES(${LAUNCHPAD_PROCESS_POOL} ${${this_target}_LDFLAGS} "-pie")

SET_TARGET_PROPERTIES(${LAUNCHPAD_PROCESS_POOL}
	PROPERTIES SKIP_BUILD_RPATH TRUE
	) # remove rpath option that is automatically generated by cmake.

INSTALL(TARGETS ${LAUNCHPAD_PROCESS_POOL} DESTINATION bin)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/packaging/preload_list.txt DESTINATION share/aul)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/packaging/launchpad-process-pool-preload-list.txt DESTINATION share/aul)
ENDIF(_APPFW_FEATURE_PROCESS_POOL)
